--- a/Parcial1-AP1/App.config
+++ b/Parcial1-AP1/App.config
@@ -7,7 +7,7 @@
   <connectionStrings>
     <add name="ConStr"
      connectionString="Data Source=.\SqlExpress;
-         Initial Catalog=;Integrated Security=True"
+         Initial Catalog=Parcialdb;Integrated Security=True"
      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
