--- a/Parcial1-AP1/Parcial1-AP1.csproj
+++ b/Parcial1-AP1/Parcial1-AP1.csproj
@@ -64,6 +64,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\Consultas\cEvaluacion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Consultas\cEvaluacion.Designer.cs">
+      <DependentUpon>cEvaluacion.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\Registro\rEvaluacion.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +88,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UI\Consultas\cEvaluacion.resx">
+      <DependentUpon>cEvaluacion.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\Registro\rEvaluacion.resx">
       <DependentUpon>rEvaluacion.cs</DependentUpon>
     </EmbeddedResource>
@@ -100,7 +109,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="UI\Consultas\" />
     <Folder Include="UI\Reportes\" />
   </ItemGroup>
   <ItemGroup>
