--- a/Parcial1-AP1Tests/App.config
+++ b/Parcial1-AP1Tests/App.config
@@ -11,4 +11,10 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="ConStr"
+     connectionString="Data Source=.\SqlExpress;
+         Initial Catalog=Parcialdb;Integrated Security=True"
+     providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
